--- a/client/src/styles/_shipping.scss
+++ b/client/src/styles/_shipping.scss
@@ -45,6 +45,7 @@
     }
 
     > button {
+      @include btn(1rem, $color3, $color1);
       border-radius: 5px;
       font-size: 1.05rem;
       text-transform: uppercase;
