--- a/client/src/styles/app.scss
+++ b/client/src/styles/app.scss
@@ -115,6 +115,7 @@ $color3: rgb(0, 104, 136);
     @include flex(column, flex-start, stretch, 2rem);
 
     > button {
+      @include btn(1rem, $color3, $color1);
       width: 100%;
       font-size: 1.1rem;
     }
